JWT bekapcsolásta, swagger beállítása
