# backend/src/server.js
@@ -80,11 +80,11 @@ app.use('/post', authenticateJwt, adminOnly, require('./controllers/post/post.ro
 app.use('/api-docs', swaggerUi.serve, swaggerUi.setup(swaggerDocument));
 
 // saját route-ok
-app.use('/patient', require('./controllers/patient/routes'));
-app.use('/vaccine', require('./controllers/vaccine/routes'));
-app.use('/adverse-event', require('./controllers/adverse-event/routes'));
-app.use('/place', require('./controllers/place/routes'));
-app.use('/vaccination', require('./controllers/vaccination/routes'));
+app.use('/patient', authenticateJwt, require('./controllers/patient/routes'));
+app.use('/vaccine', authenticateJwt, require('./controllers/vaccine/routes'));
+app.use('/adverse-event', authenticateJwt, require('./controllers/adverse-event/routes'));
+app.use('/place', authenticateJwt, require('./controllers/place/routes'));
+app.use('/vaccination', authenticateJwt, require('./controllers/vaccination/routes'));
 
 app.use((err, req, res, next) => {
     //console.error(`ERR ${err.statusCode}: ${err.message}`);
